--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 # mapper查询时，表字段中 下划线 自动转换为驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+# 配置日志
+logging.file.path=logs
+logging.level.root=info
+logging.level.com.bx.community.mapper=debug
+# 最多存储指定天数的日志（一天可以有多个文件）
+logging.logback.rollingpolicy.max-history=30
+# 每个日志文件存储的最大值
+logging.logback.rollingpolicy.max-file-size=100MB
