--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ github.client.secret=3cc409fbde76833ffb99a203a11d4e3420360f52
 github.redirect.uri=http://localhost:8080/callback
 
 # springboot 内置datasource
-spring.datasource.url=jdbc:h2:~/community1
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:~/community1
+#spring.datasource.username=sa
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/community?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mapper查询时，表字段中 下划线 自动转换为驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
