--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # 配置日志
 logging.file.path=logs
 logging.level.root=info
-logging.level.com.bx.community.mapper=debug
+#logging.level.com.bx.community.mapper=debug
 # 最多存储指定天数的日志（一天可以有多个文件）
 logging.logback.rollingpolicy.max-history=30
 # 每个日志文件存储的最大值
